--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,80 @@
+aniso8601==9.0.0
+apturl==0.5.2
+bcrypt==3.1.7
+blinker==1.4
+Brlapi==0.7.0
+cachetools==4.2.1
+certifi==2019.11.28
+chardet==3.0.4
 click==7.1.2
-Flask==1.1.1
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cssselect==1.1.0
+cssutils==1.0.2
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
+distro==1.4.0
+distro-info===0.23ubuntu1
+duplicity==0.8.12.0
+entrypoints==0.3
+fasteners==0.14.1
+Flask==1.1.2
+Flask-Mail==0.9.1
+Flask-RESTful==0.3.8
+future==0.18.2
+httplib2==0.14.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.3
+kazam==1.4.5
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+lxml==4.6.2
+Mako==1.1.0
 MarkupSafe==1.1.1
+monotonic==1.5
+mysql-connector-python==8.0.23
+netifaces==0.10.4
+oauthlib==3.1.0
+paramiko==2.6.0
+pexpect==4.6.0
+premailer==3.7.0
+protobuf==3.15.8
+psutil==5.5.1
+pycairo==1.16.2
+pycups==1.9.73
+PyGObject==3.36.0
+PyJWT==1.7.1
+PyMySQL==1.0.2
+PyNaCl==1.3.0
+python-apt==2.0.0+ubuntu0.20.4.4
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+pytz==2021.1
+pyxdg==0.26
+PyYAML==5.3.1
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+simplejson==3.16.0
+six==1.15.0
+ssh-import-id==5.10
+systemd-python==234
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+urwid==2.0.1
+usb-creator==0.3.7
+wadllib==1.3.3
 Werkzeug==1.0.1
+xkit==0.0.0
+yagmail==0.14.245
